# NPC

./: .gitignore  H5ADDataGenerator  README.md  environment.yml  gene.csv  my_model  pyproject.toml  region_of_interest_metadata.csv  train_model
notebooks/: exploratory_analysis.ipynb
tests/: test_analysis.py
